objects/Line_Items_old__c.object
<CustomObject>
    <fields>
        <fullName>Catogery__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supplies</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Items__c</fullName>
        <label>Quote_Items</label>
        <referenceTo>Quotes__c</referenceTo>
        <relationshipName>Line_Items1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Line Items_old</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items_old</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>